# HKSoftware

HKCore/61850/Module/dlt860-ngsp/: CMakeLists.txt  ClientCallBack.cpp  ClientCallBack.h  DLT860Api.cpp  DLT860Api.h
HKCore/61850/Module/dlt860-ngsp/3rd_lib/: uuid.h
HKCore/61850/Module/dlt860-ngsp/3rd_lib/sqlite/: sqlite3.h
HKCore/61850/Module/dlt860-ngsp/conf/: server.json  server_daodaoliang.json
HKCore/61850/Module/dlt860-ngsp/config/: stack_config.h
HKCore/61850/Module/dlt860-ngsp/examples/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_brcb_report/: CMakeLists.txt  client_example_brcb_report.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_brcb_report_multiple_op/: dlt860_client_example_brcb_report_multiple_op.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_connect/: dlt860_client_example_connect.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_control/: CMakeLists.txt  dlt860_client_example_control.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_data_define/: CMakeLists.txt  dlt860_client_example_data_define.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_dataset/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_edit_sg/: client_example_edit_sg.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_filedirectory/: client_example_read_directory.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_filesync/: client_example_filesync.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_getfile/: CMakeLists.txt  client_example_getfile.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_read_allvalue/: CMakeLists.txt  client_example_read_allvalue.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_read_cbvalue/: client_example_read_cbvalue.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_read_sg/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_read_value/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_set_value/: CMakeLists.txt  dlt860_client_example_set_value.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_setfile/: client_example_setfile.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_test/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_client_example_urcb_report/: CMakeLists.txt  client_example_urcb_report.cpp
HKCore/61850/Module/dlt860-ngsp/examples/dlt860_decoder_example/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/server_example_rpc/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/examples/server_example_settings/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/hal/inc/: gsp_hal_serial.h  gsp_hal_thread.h  gsp_lib_memory.h  gsp_platform_endian.h  gsp_tls_socket.h
HKCore/61850/Module/dlt860-ngsp/hal/memory/: lib_memory.cpp
HKCore/61850/Module/dlt860-ngsp/hal/serial/linux/: serial_port_linux.cpp
HKCore/61850/Module/dlt860-ngsp/hal/serial/win32/: serial_port_win32.c
HKCore/61850/Module/dlt860-ngsp/hal/socket/linux/: socket_linux.cpp
HKCore/61850/Module/dlt860-ngsp/hal/socket/win32/: socket_win32.cpp
HKCore/61850/Module/dlt860-ngsp/hal/thread/linux/: thread_linux.cpp
HKCore/61850/Module/dlt860-ngsp/hal/time/unix/: time.cpp
HKCore/61850/Module/dlt860-ngsp/scd/: NSR3560.cid  PE1001.cid  PL1001.cid  P_L1011X.cid  P_L2211D.cid  SFFIS.cid  SPV1001A3.cid
HKCore/61850/Module/dlt860-ngsp/scd/COMTRADE/: PL2201A_RCD_4741_20201228_160833_181_f.hdr  PL2201A_RCD_4741_20201228_160833_181_f.mid  PL2201A_RCD_4742_20201228_161035_384_f.cfg  PL2201A_RCD_4742_20201228_161035_384_f.hdr  PL2201A_RCD_4742_20201228_161035_384_f.mid  copy.sh
HKCore/61850/Module/dlt860-ngsp/scripts/: start_server.sh
HKCore/61850/Module/dlt860-ngsp/src/: CMakeLists.txt
HKCore/61850/Module/dlt860-ngsp/src/common/: linked_list.cpp  simple_allocator.cpp
HKCore/61850/Module/dlt860-ngsp/src/common/inc/: gsp_linked_list.h  libdlt860_common_api.h  nlogging.h
HKCore/61850/Module/dlt860-ngsp/src/goose/: goose_receiver_internal.h
HKCore/61850/Module/dlt860-ngsp/src/logging/: log_storage.cpp  logging_api.h
HKCore/61850/Module/dlt860-ngsp/src/model/: modelgenerator.cpp  modelgenerator.h
HKCore/61850/Module/dlt860-ngsp/src/sampled_values/: sv_publisher.cpp
HKCore/61850/Module/dlt860-ngsp/src/scd/: CMakeLists.txt  base64.h  dataattributedefinition.cpp  sclparser.cpp
HKCore/61850/Module/dlt860-ngsp/src/sg/: sqlitesgstorage.cpp
HKCore/61850/Module/dlt860-ngsp/src/vs/: stdbool.h
HKCore/61850/Module/dlt860-ngsp/swig/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_brcb_report_multiple_op/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_connect/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_edit_sg/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_filedirectory/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_log/: CMakeLists.txt  dlt860_client_example_log.cpp
HKCore/61850/Module/dlt860/examples/dlt860_client_example_model/: CMakeLists.txt  client_example_model.cpp
HKCore/61850/Module/dlt860/examples/dlt860_client_example_read_cbvalue/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/dlt860_client_example_rpc/: CMakeLists.txt  dlt860_client_example_rpc.cpp
HKCore/61850/Module/dlt860/examples/dlt860_client_example_setfile/: CMakeLists.txt
HKCore/61850/Module/dlt860/examples/server_example_update_report/: CMakeLists.txt  server_example_update_report.cpp
HKCore/61850/Module/dlt860/examples/server_example_update_single/: CMakeLists.txt  server_example_update_single.cpp
HKCore/61850/Module/dlt860/hal/: CMakeLists.txt
HKCore/61850/Module/dlt860/hal/inc/: gsp_hal_base.h  gsp_hal_ethernet.h  gsp_hal_socket.h  gsp_hal_time.h  gsp_tls_config.h
HKCore/61850/Module/dlt860/hal/memory/: vssver2.scc
HKCore/Module/: SttFileToolMngr.cpp  (+2 more)
(+24082 files in other folders)
